@@ -5,6 +5,7 @@
 * WePay: Update WePay to API version 2016-12-07 [davidsantoso]
 * PaymentExpress: Update supported countries [shasum]
 * CyberSource: Add Lebanon to supported countries [shasum]
+* Vanco: Update test URL [davidsantoso]
 
 == Version 1.62.0 (December 5, 2016)
 * AuthorizeNet: Map to standard AVSResult codes [shasum]
